# lars

./: CODEBOOK.md  LICENSE  README.md  pyproject.toml
.github/workflows/: security-analysis.yml  tests.yml  virus.yml
lars/: __init__.py
lars/nepho/: __init__.py  config.py  inference.py
lars/nepho/models/: __init__.py  base_model.py  gpt_model.py  ollama_model.py
lars/preprocessing/: __init__.py  labels.py  radar_preprocessing.py
lars/util/: __init__.py  confusion_matrix.py
tests/: conftest.py  test_confusion_matrix.py  test_gpt_model.py
tests/integration/: conftest.py  test_radar_preprocessing.py
