[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lars"
version = "0.1.0"
description = "A brief description of the project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Robert Jackson", email = "rjackson@anl.gov"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8", "openai", "ollama", "xradar", "cmweather", "torchvision", "torch"]

[project.urls]
Homepage = "https://github.com/rcjackson/lars"