[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lars"
version = "0.1.0"
description = "LLM-Assisted Radar Scene classification"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Robert Jackson", email = "rjackson@anl.gov"},
    {name = "Le Chen", email = "le.chen@anl.gov"},
    {name = "Seongha Park", email = "seongha.park@anl.gov"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8", "openai", "xradar", "python-dotenv", "scikit-learn", "cmweather", "torchvision", "torch", "aiohttp", "matplotlib", "pandas"]

[project.urls]
Homepage = "https://github.com/rcjackson/lars"